Removed deprecated instantiation, improved setting value stability for result mapper